CSS/Resposividade/BlogR.css
@media (max-width: 767px) {
    nav ul {
        position: fixed;
        top: 80px;
        left: -100%;
        background-color: var(--corAzulMaisEscuro);
        height: auto;
        width: 100%;
        text-align: center;
        display: block;
        transition: all 0.3s ease;
        z-index: 10;
        height: 100%;
    }

    nav ul.open {
        left: 0;
    }

    nav ul li {
        width: 100%;
        padding: 20px 0;
        margin: 0;
    }

    nav ul li a {
        width: 100%;
        font-size: 1.5em;
    }

    nav #MenuHam {
        display: block;
    }
}

@media (min-width: 767px) {
    #container {
        height: 500px;
    }

    #texto {
        background-color: #00000000;
        width: 40%;
        box-shadow: 5px 5px 5px #00000000;
    }

    #texto h2 {
        font-size: 1.5rem;
        font-weight: bolder;
    }

    #texto div p {
        font-size: 1rem;
    }

    #texto p {
        font-size: 1rem;
    }
    #Materias article {
        margin-top: 20px;
        display: grid;
        grid-template-columns: 75% 25%;
        height: auto;
        grid-gap: 15px;
    }
    #areaMaterias{
        display: grid;
        grid-template-columns: 50% 50%;
        grid-template-rows: 375px 375px 375px 375px 375px;
        height: 100%;
    }
    #areaMaterias a {
        width: 100%;
        height: 350px;
        margin: 10px;
    }
    #areaMaterias #filtroM {
        display: none;
    }
    #Materias #filtro{
        width: 100%;
        padding: 10px;
        display: flex;
        flex-direction: column;
        justify-content: start;
    }
    #Materias #filtro div{
        width: 100%;
        display: block;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }
    #areaAnuncios{
        display: grid;
        grid-template-columns: 100%;
        grid-template-rows: 375px 375px 375px 375px 375px;
        height: 100%;
        grid-gap: 15px;
    }
    ins{
        height: 375px;
    }
    #Materias article aside{
        display: block;
        width: 100%;
        height: 100%;
        margin: 10px;
    }

    #Materias .asideMobile {
        display: none;
    }

    #Newsletter {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }
    
    #Newsletter h1,
    p {
        text-align: start;
    }

    #Newsletter article {
        width: 50%;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        align-items: start;
        padding: 10px;
        max-width: 500px;
    }
    form{
        width: 100%;
    }

    #Newsletter #formN{
        width: 50%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 10px;
        max-width: 500px;
    }

    #Newsletter input{
        width: 300px;
        height: 40px;
        margin: 10px;
        padding: 5px;
        border: 1px solid #94d8ff;
        border-radius: 5px;
    }

    footer #containerF {
        width: 100%;
        display: flex;
        flex-wrap: nowrap;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
    }

    footer #containerF #Empresa img {
        width: 200px;
    }
}

@media (min-width: 1024px) {
    #texto {
        width: 40%;
    }

    #texto h2 {
        font-size: 1.75rem;
        font-weight: bolder;
    }

    #texto div p {
        font-size: 1.2rem;
    }

    #texto p {
        font-size: 1.2rem;
    }

    #categorias {
        max-width: 1000px;
    }

    #categorias article a {
        width: 150px;
    }

    #Materias {
        max-width: 1000px;
        padding: 0;
    }
    #areaMaterias{
        display: grid;
        grid-template-columns: 50% 50%;
        grid-template-rows: 375px 375px 375px 375px 375px;
        height: 100%;
    }
    #areaAnuncios{
        display: grid;
        grid-template-columns: 100%;
        grid-template-rows: 375px 375px 375px 375px 375px;
        height: 100%;
        grid-gap: 15px;
    }
    #Materias a {
        padding: 5px;
        margin: 10px 0px 0px 0px;
    }

    #Materias .imgMateria {
        height: 200px;
    }

    #Newsletter {
        padding: 10px;
    }

    #Newsletter div{
        max-width: 1000px;
    }

    #Newsletter form {
        width: 50%;
        margin: 0;
    }

    footer #containerF {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        padding: 0px 20px;
        font-size: 1rem;
    }
}

@media (min-width: 1440px) {
    .slide {
        padding: 40px;
    }

    #texto {
        width: 30%;
    }
}

